--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u><b>Juncheng Li</b></u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen), East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCV Workshop, AIM2019 Winner Award</b></font>), 2019.</i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCV Workshop, AIM2019 Winner</b></font>), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
@@ -262,7 +262,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
     </li>
-    <li>
 </section>
 
 <p></p>
