--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Accept with mandatory minor revisions, will coming soon!</i> </br>
     </li>
 
     <li>
@@ -162,7 +162,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>).</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Accept, will coming soon!</i> </br>
     </li>
 
     <li>
