--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (<font color="red"><b>ACCV, ChinaMM2018 Third Place</b></font>), 2018.</i>
     </li>
     <li>
         <b>【1】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
