--- a/index.html
+++ b/index.html
@@ -156,19 +156,23 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
     <li>
         <b>【4】 Multi-level Edge Features Guided Network for Image Denoising </b> </br>
+        <a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[Homepage]</a>
+        <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
         【SCI-1, IF=8.739】
+        </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>).</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Accept, will coming soon!</i> </br>
     </li>
 
     <li>
         <b>【3】 Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
+        <a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
-        [Code]
+        <a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
         【SCI-1, IF=9.340】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
@@ -193,6 +197,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
     <li>
         <b>【1】Multi-scale Residual Network for Image Super-Resolution </b> </br>
+        <a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[Homepage]</a>
         <a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
