--- a/projects/TNNLS2020_MLEFGN/index.html
+++ b/projects/TNNLS2020_MLEFGN/index.html
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 <br><br>
 <table align="center">
 <tr>
-	<td align="center"><embed src="Head.png" width="600"></td>
+	<td align="center"><embed src="head.png" width="600"></td>
 </tr>
 </table>
 
