--- a/projects/TNNLS2020_MLEFGN/index.html
+++ b/projects/TNNLS2020_MLEFGN/index.html
@@ -91,7 +91,7 @@ var _hmt = _hmt || [];
 <hr/>
 <table align="center">
 <tr>
-	<td align="center"><img border=0 width=800 src="Noise.png"></td>
+	<td align="center"><img border=0 width=600 src="Noise.png"></td>
 </tr>
 </table>
 <p><font size="4" face="Palatino Linotype">The most widely used method is to apply off-the-shelf edge detectors on the degraded image to obtain image edges. However, (1). Existing edge extractors are extremely sensitive to noise or other
@@ -99,7 +99,7 @@ interference factors; (2). It is extremely difficult to obtain clear and accurat
 </font></p>
 <table align="center">
 <tr>
-	<td align="center"><img border=0 width=800 src="EdgeNet.png"></td>
+	<td align="center"><img border=0 width=600 src="EdgeNet.png"></td>
 </tr>
 </table>
 
@@ -111,7 +111,7 @@ interference factors; (2). It is extremely difficult to obtain clear and accurat
 <hr/>
 <table align="center">
 <tr>
-	<td align="center"><img border=0 width=800 src="MLEFGN.png"></td>
+	<td align="center"><img border=0 width=900 src="MLEFGN.png"></td>
 </tr>
 </table>
 
@@ -135,7 +135,7 @@ interference factors; (2). It is extremely difficult to obtain clear and accurat
 <hr/>
 <table align="center">
 <tr>
-	<td align="center"><img border=0 width=800 src="EdgeResults.png"></td>
+	<td align="center"><img border=0 width=900 src="EdgeResults.png"></td>
 </tr>
 </table>
 
@@ -149,13 +149,13 @@ interference factors; (2). It is extremely difficult to obtain clear and accurat
 	<td align="center"><img border=0 width=800 src="TABLE1.png"></td>
 </tr>
 <tr>
-	<td align="center"><img border=0 width=800 src="TABLE2.png"></td>
+	<td align="center"><img border=0 width=600 src="TABLE2.png"></td>
 </tr>
 <tr>
-	<td align="center"><img border=0 width=800 src="TABLE3.png"></td>
+	<td align="center"><img border=0 width=900 src="TABLE3.png"></td>
 </tr>
 <tr>
-	<td align="center"><img border=0 width=800 src="TABLE4.png"></td>
+	<td align="center"><img border=0 width=600 src="TABLE4.png"></td>
 </tr>
 </table>
 
@@ -207,7 +207,7 @@ interference factors; (2). It is extremely difficult to obtain clear and accurat
 <h2><p><font size="6" color="black"><b>BibTex</b></font></p></h2>
 <hr/>
 <font size="3">
-@InProceedings{fang2020soft,<br>
+@InProceedings{fang2020multi,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;title = {Multi-level Edge Features Guided Network for Image Denoising},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;author = {Fang, Faming and Li, Juncheng, Yiting Yuan, Zeng, Tieyong, and Guixu Zhang},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;booktitle = {IEEE Transactions on Neural Networks and Learning Systems},<br>
