--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6046", target="_blank"> IEEE TMM 2020</b></a>.
+    </li>
+    <li>
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385", target="_blank"> IEEE TNNLS 2020</b></a>.
+    </li>
+    <li>
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639", target="_blank"> IEEE Access 2020</b></a>.
     </li>
     <li>
