--- a/projects/TNNLS2020_MLEFGN/index.html
+++ b/projects/TNNLS2020_MLEFGN/index.html
@@ -209,7 +209,7 @@ interference factors; (2). It is extremely difficult to obtain clear and accurat
 <font size="3">
 @InProceedings{fang2020multi,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;title = {Multi-level Edge Features Guided Network for Image Denoising},<br>
-&nbsp;&nbsp;&nbsp;&nbsp;author = {Fang, Faming and Li, Juncheng, Yiting Yuan, Zeng, Tieyong, and Guixu Zhang},<br>
+&nbsp;&nbsp;&nbsp;&nbsp;author = {Fang, Faming and Li, Juncheng, Yuan Yiting, Zeng, Tieyong, and Zhang Guixu},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;booktitle = {IEEE Transactions on Neural Networks and Learning Systems},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;year = {2020},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;publisher = {IEEE}<br>
