--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ East China Normal University
 <p style="font-size: 0.8rem;">
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
-Long-term co-authors: Kangfu MEI, ZENG Tieyong, Aiwen Jiang, Qiaosi Yi.
+Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, ZENG Tieyong, Aiwen Jiang, Qiaosi Yi.
 </p>
 
 <p style="font-size: 0.8rem;">
@@ -251,7 +251,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
         【SCI-3, IF=2.004】
         </br>
-        <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang,<u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
     </li>
