--- a/index.html
+++ b/index.html
@@ -140,12 +140,16 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">My Works</h1>
-    <p style="margin: 0; padding-left: 1rem"><font color="red"><b>* : Main contributor</b></font></p>
-    <p style="margin: 0; padding-left: 1rem"><font color="red"><b># : Joint first authors</b></font></p>
+    <p style="margin: 0; padding-left: 1rem"><font color="red"><b>* : Main contributor \qquad  # : Joint first authors \qquad Citations: 182</b></font></p> 
+    <p style="margin: 0; padding-left: 1rem"><font color="red"><b>【Total Papers: 21】 \qquad 【Accepted: 12】 \qquad 【Under review: 3] \qquad 【Work in Progress: 6】</b></font></p>
     </br>
 
     <li>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
+        [Paper]
+        [Code]
+        【SCI-2, IF=4.133】
+        </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Circuits and Systems for Video Technology (<font color="red"><b>TCSVT</b></font>), 2020.</i> </br>
@@ -154,6 +158,10 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
     <li>
         <b>【5】 Luminance-aware Pyramid Network for Low-light Image Enhancement </b> </br>
+        [Paper]
+        [Code]
+        【SCI-1, IF=6.051】
+        </br>
         <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
@@ -299,7 +307,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">Service:</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Reviewer:</h1>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Journal</h1>
     <li>
         IEEE Transactions on Image Processing (TIP)
