--- a/index.html
+++ b/index.html
@@ -137,12 +137,11 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <p></p>
 
+<p style="margin: 0; padding-left: 1rem"><font color="red"><b>* : Main contributor &nbsp;&nbsp;  # : Joint first authors &nbsp;&nbsp; Citations: 182</b></font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red"><b>【Total Papers: 21】 &nbsp;&nbsp; 【Accepted: 12】 &nbsp;&nbsp; 【Under review: 3] &nbsp;&nbsp; 【Work in Progress: 6】</b></font></p>
 
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">My Works</h1>
-    <p style="margin: 0; padding-left: 1rem"><font color="red"><b>* : Main contributor \qquad  # : Joint first authors \qquad Citations: 182</b></font></p> 
-    <p style="margin: 0; padding-left: 1rem"><font color="red"><b>【Total Papers: 21】 \qquad 【Accepted: 12】 \qquad 【Under review: 3] \qquad 【Work in Progress: 6】</b></font></p>
-    </br>
 
     <li>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
