--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <p></p>
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">【Total Papers: 21】 &nbsp;&nbsp; 【Accepted: 12】</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">【Under review:  3】 &nbsp;&nbsp; 【Work in Progress: 6】</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">【Accepted: 12】&nbsp;&nbsp; 【Under review:  3】</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">* : Main contributor &nbsp;&nbsp;  # : Joint first authors &nbsp;&nbsp; Citations: 186</font></p> 
 </br>
 
@@ -228,12 +227,31 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Works</h1>
     <li>
+        <b>【8】Spatial Pixel Irrelevant Network for Learning Image-to-image Translation </b> </br>
+        [Paper]
+        [Code]
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
+        <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Revise</i>
+    </li>
+    <li>
+        <b>【7】Visual and Semantic Scene Understanding Under Bad Weather </b> </br>
+        [Paper]
+        [Code]
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
+        <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Revise</i>
+    </li>
+    <li>
         <b>【6】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
         <a href="paper/arxiv.pdf", target="_blank">[Paper]</a>
+        [Code]
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">arXiv preprint arXiv: 2006.13511.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review. arXiv preprint arXiv: 2006.13511.</i>
     </li>
     <li>
         <b>【5】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
@@ -353,9 +371,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
-        My friend and I build a WeChat Official Account named 【快乐AI】.
-    </li>
-    <li>
         I became a China Computer Federation member in 2019.
     </li>
     <li>
@@ -374,8 +389,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">Recommend</h1>
-        
         <div align= "center">
             <img src="recommend/LJC.jpeg" width="200" height="200" /> 
         </div> 
