--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Revise</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under revise</i>
     </li>
     <li>
         <b>【7】Visual and Semantic Scene Understanding Under Bad Weather </b> </br>
@@ -242,7 +242,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Revise</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under revise</i>
     </li>
     <li>
         <b>【6】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
