--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <p></p>
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">【Accepted: 12】&nbsp;&nbsp; 【Under review:  3】</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">* : Main contributor &nbsp;&nbsp;  # : Joint first authors &nbsp;&nbsp; Citations: 186</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">【Accepted: 12】 &nbsp;&nbsp; 【Under review:  3】&nbsp;&nbsp;【Under review:  4】</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">* : Citations: 186 &nbsp;&nbsp; Highest citations paper: 96</font></p> 
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
@@ -163,6 +163,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         【SCI-1, IF=6.051】
         </br>
         <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors.</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Accept with mandatory minor revisions, will coming soon!</i> </br>
@@ -176,7 +177,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         【SCI-1, IF=8.739】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, * Main contributor.</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>).</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
@@ -190,7 +191,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         【SCI-1, IF=9.340】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, * Main contributor.</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (<font color="red"><b>TIP, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
