--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <p></p>
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">【Accepted: 12】 &nbsp;&nbsp; 【Under review:  3】&nbsp;&nbsp;【Under review:  4】</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">【Accepted: 12】 &nbsp;&nbsp; 【Under review:  3】&nbsp;&nbsp;【Under revise:  4】</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">* : Citations: 186 &nbsp;&nbsp; Highest citations paper: 96</font></p> 
 </br>
 
