--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 186 &nbsp;&nbsp; Highest citations paper: 96</font></p> 
-<p style="margin: 0; padding-left: 1rem"><font color="red">【Accepted: 12】 &nbsp;&nbsp; 【Under review:  3】&nbsp;&nbsp;【Under revise:  4】</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 186 &nbsp; Highest citations paper: 96</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 3 &nbsp; Under revise: 4</font></p>
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
