--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors.</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Accept with mandatory minor revisions, will coming soon!</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Accept, will coming soon!</i> </br>
     </li>
 
     <li>
