--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ East China Normal University
 <p style="font-size: 0.8rem;">
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
-Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, ZENG Tieyong, Aiwen Jiang, Qiaosi Yi.
+Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, <a href="https://scholar.google.com.hk/citations?user=ZO3KGykAAAAJ&hl=zh-CN", target="_blank">Aiwen Jiang</b></a>, <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank">Qiaosi Yi</b></a>.
 </p>
 
 <p style="font-size: 0.8rem;">
@@ -45,10 +45,10 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         Deep Learning, Computer Vision, Image Processing.
     </li>
     <li>
-        Image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, image deblurring, and image enhancement.
+        Image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, image deblurring, and low-light image enhancement.
     </li>
     <li>
-        Image degradation, such as image compression and image decolorization.
+        Also focus on medical image processing, image stitching, image compression, and image decolorization.
     </li>
    
 </section>
@@ -58,6 +58,9 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
+    <li>
+        _____________2020_____________
+    </li>
     <li>
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6046", target="_blank"> IEEE TMM 2020</b></a>.
     </li>
@@ -71,6 +74,9 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
     </li>
     <li>
+        _____________2019_____________
+    </li>
+    <li>
         We have 2 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019</b></a>.
     </li>
     <li>
@@ -78,6 +84,9 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     </li>
     <li>
         We have 1 paper accepted to <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing 2019</a>.
+    </li>
+    <li>
+        _____________2018_____________
     </li>
     <li>
         We have 1 paper accepted to <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
@@ -138,7 +147,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 186 &nbsp; Highest citations paper: 96</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 184 &nbsp; Highest citations paper: 96</font></p> 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 3 &nbsp; Under revise: 4</font></p>
 </br>
 
