--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639", target="_blank"> IEEE Access 2020</b></a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank">IEEE TIP 2020</b></a>.
     </li>
     <li>
         _____________2019_____________
