--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 188 &nbsp; Highest citations paper: 99</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 193 &nbsp; Highest citations paper: 102</font></p> 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 3 &nbsp; Under revise: 4</font></p>
 </br>
 
@@ -368,6 +368,9 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     </li>
     <li>
         IET Electronics Letters
+    </li>
+    <li>
+        ACM Transactions on Asian and Low-Resource Language Information Processing
     </li>
     </br>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Conference</h1>
