--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 193 &nbsp; Highest citations paper: 102</font></p> 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 3 &nbsp; Under revise: 4</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 4 &nbsp; Under revise: 5</font></p>
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
@@ -156,14 +156,14 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
     <li>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
-        [Paper]
-        [Code]
+        <a href="paper/MDCN.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
         【SCI-2, IF=4.133】
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Circuits and Systems for Video Technology (<font color="red"><b>TCSVT</b></font>), 2020.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review. arXiv preprint, arXiv:2008.13084.</i> </br>
     </li>
 
     <li>
@@ -238,22 +238,13 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Works</h1>
     <li>
-        <b>【8】Spatial Pixel Irrelevant Network for Learning Image-to-image Translation </b> </br>
+        <b>【7】Edge-guided Composition Network for Image Stitching </b> </br>
         [Paper]
         [Code]
         </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
-        <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under revise</i>
-    </li>
-    <li>
-        <b>【7】Visual and Semantic Scene Understanding Under Bad Weather </b> </br>
-        [Paper]
-        [Code]
-        </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
-        <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under revise</i>
+        <p style="margin: 0; padding-left: 1rem">Qinyan Dai, Faming Fang, <u><b>Juncheng Li</b></u>, Guixu Zhang, and Aimin Zhou</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under revise, will coming soon!</i>
     </li>
     <li>
         <b>【6】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
