--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 193 &nbsp; Highest citations paper: 102</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 201 &nbsp; Highest citations paper: 105</font></p> 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 4 &nbsp; Under revise: 5</font></p>
 </br>
 
@@ -168,7 +168,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
     <li>
         <b>【5】 Luminance-aware Pyramid Network for Low-light Image Enhancement </b> </br>
-        [Paper]
+        <a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
         [Code]
         【SCI-1, IF=6.051】
         </br>
@@ -176,7 +176,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors.</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Accept, will coming soon!</i> </br>
     </li>
 
     <li>
