--- a/index.html
+++ b/index.html
@@ -77,16 +77,19 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         _____________2019_____________
     </li>
     <li>
-        We have 2 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019</b></a>.
+        We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019</a>.
+    </li>
+    <li>
+        We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019<b>AIM2019 Winner</b></a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 <b>(Oral)</b></a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing 2019</a>.
+        _____________2018_____________
     </li>
     <li>
-        _____________2018_____________
+        We have 1 paper accepted to <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing 2018</a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
@@ -281,7 +284,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang,<u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2018</i>
     </li>
     <li>
         <b>【2】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
