--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019</a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019<b>AIM2019 Winner</b></a>.
+        We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019 <b>(AIM2019 Winner)</b></a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 <b>(Oral)</b></a>.
