--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         【SCI-1, IF=8.739】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, * Main contributor.</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, * First contributor.</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>).</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
@@ -203,7 +203,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         【SCI-1, IF=9.340】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, * Main contributor.</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, * First contributor.</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (<font color="red"><b>TIP, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
