--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
-        I was an academic visitor at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30 and worked with <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong.</a> 
+        Academic Visitor, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a>, 2019.8.16--2019.09.30, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor)</a> 
     </li>
     <li>
-        I was a research assistant at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10 and worked with <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong.</a> 
+        Research Assistant, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a>, 2018.05.10--2018.09.10, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor)</a> 
     </li>
 </section>
 
@@ -150,12 +150,32 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 202 &nbsp; Highest citations paper: 106</font></p> 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 6 &nbsp; Under revise: 3</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 204 &nbsp; Highest citations paper: 108</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 6</font></p>
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">My Works</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">My Representative Publications</h1>
+    <li>
+        <b>【8】 Single Image Dehazing via Multi-scale Topological Network </b> </br>
+        [Paper]
+        [Code]
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi#, <u><b>Juncheng Li#</b></u>, Aiwen Jiang, and Faming Fang</p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors.</font></p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
+    </li>
+
+    <li>
+        <b>【7】 LegoNet: An Adjustable Elastic Framework for Single Image Super-resolution </b> </br>
+        [Paper]
+        [Code]
+        </br>
+        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
+    </li>
 
     <li>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
@@ -240,13 +260,22 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Works</h1>
     <li>
+        <b>【8】Scale-Aware Network with Regional and Semantic Attention for Crowd Counting under Cluttered Background </b> </br>
+        [Paper]
+        [Code]
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Yunxin Liu, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Kangfu Mei, and Tingting Wang</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
+    </li>
+    <li>
         <b>【7】Edge-guided Composition Network for Image Stitching </b> </br>
         [Paper]
         [Code]
         </br>
         <p style="margin: 0; padding-left: 1rem">Qinyan Dai, Faming Fang, <u><b>Juncheng Li</b></u>, Guixu Zhang, and Aimin Zhou</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under revise, will coming soon!</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
     </li>
     <li>
         <b>【6】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
@@ -255,7 +284,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under review. arXiv preprint arXiv: 2006.13511.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
     </li>
     <li>
         <b>【5】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
@@ -387,7 +416,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         My friend and I build a non-profit organization (<a href="https://github.com/MIVRC", target="_blank">MIVRC</a>) for open source image processing projects in 2019.
     </li>
     <li>
-        I build CLFStudio 【丛林蜂工作室】 in 2015, a student studio dedicated to creative project development.
+        I build CLF Studio 【丛林蜂工作室】 in 2015, a student studio dedicated to creative project development.
     </li>
 </section>
 
