--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Please contact me if you can provide this position.
 <section style="font-size: 0.6rem;">
 <h1 style="font-size: 1rem; font-weight: bold;">Biography</h1>
 <p style="font-size: 0.8rem;">
-I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
+I'm a Ph.D. student at the School of Computer Science and Technology, East China Normal University (ECNU), working with Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
 </p>
 </section>
 
@@ -110,10 +110,10 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
-        Academic Visitor, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a>, 2019.8.16--2019.09.30, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor)</a> 
+        Academic Visitor, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong</a>, 2019.8.16--2019.09.30, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor)</a> 
     </li>
     <li>
-        Research Assistant, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a>, 2018.05.10--2018.09.10, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor)</a> 
+        Research Assistant, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong</a>, 2018.05.10--2018.09.10, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor)</a> 
     </li>
 </section>
 
@@ -150,8 +150,8 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 204 &nbsp; Highest citations paper: 108</font></p> 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 6</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 204 &nbsp; Highest citations paper: 108</font></p> 
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
