--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <p></p>
 
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 12 &nbsp;Under review: 6</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 10 (papers) + 2 (reports) &nbsp; Under review: 6</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 204 &nbsp; Highest citations paper: 108</font></p> 
 </br>
 
