--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <p></p>
 
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Competition Report</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Competition Reports</h1>
     <li>
         <b>【2】AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
